did intructions until <ol>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>CSS Fundamentals</title>
 
     <!-- Un-comment the following line to see what the document looks like with the CSS Reset applied -->
@@ -63,7 +64,7 @@
               </a>.
             </p>
           </li>
-          <li>
+          <li>  
             <p>Use a tag selector to add a bottom border to every <code>&lt;header&gt;</code> tag.</p>
             <p>
               <strong>HINT</strong>: The shorthand value for a border rule is
@@ -145,7 +146,7 @@
             Make sure that the list of subitems below isn't affected by the
             above style rules! (Note - if you happen to use a relationship-based selector to do this, the background color may not change - why might that be?)
           </p>
-        </li>
+        </li>o-selector to turn the background-color 
         <li>
           <p>
             Use the <code>:nth-child</code> pseudo-selector to turn the
